# product-copilot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  demo.tape  pc.py  pyproject.toml  requirements.txt
.claude/commands/: pc-discover.md  pc-generate.md  pc-help.md  pc-status.md
context/: _template.md  b2b-platform.md  document-management.md  event-ops.md  financial-reporting.md  plateforme-b2b.md
examples/: cas1_conges.md  case2_contract_invoice.md  case3_mission_notification.md  case4_client_contacts.md  case5_invoice_export.md  case6_freelancer_payment.md
examples/leave-approval/: README.md  acceptance-criteria.md  discovery-brief.md  discovery-brief.txt  epic.github.json  epic.gitlab.json  epic.json  epic.md  model.json  prd.md  release-notes.md  request.md  solution-assessment.md  solution-assessment.txt
fixtures/golden/: doc-reapproval.json  doc-reapproval.runs.json  event-checkin.json  event-checkin.runs.json  export-financials.json  export-financials.runs.json  invoice-on-signature.json  invoice-on-signature.runs.json  leave-approval.json  leave-approval.runs.json  notify-mission-end.json  notify-mission-end.runs.json  requests.md
framework/: elicitation.md  model_schema.json
prompts/: brief.md  criteria.md  engine.md  epic.md  estimate.md  prd.md  release.md  stories.md
scripts/: golden_diff.py  golden_lib.py  golden_run.py
src/: engine.py
src/product_copilot/: __init__.py  __main__.py  cli.py  paths.py
src/product_copilot/core/: __init__.py  adapters.py  analysis.py  llm.py  (+5 more)
tests/: test_engine.py  test_golden_lib.py
(+3 files in other folders)
